static/psi4manual/1.2.1/_sources/api/psi4.core.Options.rst.txt
Options
=======

.. currentmodule:: psi4.core

.. autoclass:: Options
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~Options.add_array
      ~Options.add_bool
      ~Options.add_int
      ~Options.add_str
      ~Options.add_str_i
      ~Options.get_bool
      ~Options.get_current_module
      ~Options.get_double
      ~Options.get_int
      ~Options.get_int_vector
      ~Options.get_str
      ~Options.read_globals
      ~Options.set_array
      ~Options.set_bool
      ~Options.set_current_module
      ~Options.set_double
      ~Options.set_int
      ~Options.set_read_globals
      ~Options.set_str
      ~Options.set_str_i
      ~Options.validate_options

   .. rubric:: Methods Documentation

   .. automethod:: add_array
   .. automethod:: add_bool
   .. automethod:: add_int
   .. automethod:: add_str
   .. automethod:: add_str_i
   .. automethod:: get_bool
   .. automethod:: get_current_module
   .. automethod:: get_double
   .. automethod:: get_int
   .. automethod:: get_int_vector
   .. automethod:: get_str
   .. automethod:: read_globals
   .. automethod:: set_array
   .. automethod:: set_bool
   .. automethod:: set_current_module
   .. automethod:: set_double
   .. automethod:: set_int
   .. automethod:: set_read_globals
   .. automethod:: set_str
   .. automethod:: set_str_i
   .. automethod:: validate_options
